# screepsCxx

./: .gitignore  CMakeLists.txt  build  main.js  script_build  upload.py  your_code.cpp
ApiCxx/: CMakeLists.txt
